--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,20 @@
 # CHANGELOG
 
+### v2.0.0
+
+- rewroten all codes
+
+
+### NOTES
+
+> Sometimes you need ignore gosumdb error '410 Gone'
+> ```bash
+> export GONOSUMDB="github.com/hedzr/errors,$GONOSUMDB"
+> # Or
+> export GOSUMDB=off
+> ```
+> For more information, see also:
+> https://github.com/golang/go/issues/35164
 
 
 ### v1.1.13
