--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # CHANGELOG
 
+- v3.1.11
+  - fixed error.Is to avoid panic when testing on some obj
+
 - v3.1.9
   - fixed error.Is deep test to check two errors' message text contents if matched
   - fixed errors.v3.Join when msg is not empty in an err obj
